--- a/back/deploy.config
+++ b/back/deploy.config
@@ -81,10 +81,13 @@ export PIARA_SERVERCOMMONENV_Main__ZulipSettings__botEmail=$main_creds_server_zu
 export PIARA_SERVERCOMMONENV_Main__ZulipSettings__domain=$main_creds_server_zulip_domain
 export PIARA_SERVERCOMMONENV_Main__ZulipSettings__enabled=$main_servercommon_main_zulipsettings_enabled
 
+export PIARA_SERVERCOREENV_Main__Hangfire__Enabled='true'
 export PIARA_SERVERCOREENV_Main__Hangfire__ProcessUsersBackgroundJobs='true'
 export PIARA_SERVERCOREENV_Main__Workers__Indexation__Enabled='true'
 export PIARA_SERVERCOREENV_Main__Workers__PushStixObjects__Enabled='true'
 
+export PIARA_SERVERMAINTENANCEENV_Main__Hangfire__Enabled='true'
+export PIARA_SERVERMAINTENANCEENV_Main__Hangfire__SendToIndexationJobsWorkerCount='1'
 export PIARA_SERVERMAINTENANCEENV_Main__RunDbMigrations='true'
 export PIARA_SERVERMAINTENANCEENV_Main__Workers__ClearAlerts__Enabled='true'
 export PIARA_SERVERMAINTENANCEENV_Main__Workers__ClearReports__Enabled='true'
