--- a/back/deploy.config
+++ b/back/deploy.config
@@ -82,7 +82,7 @@ export PIARA_SERVERCOMMONENV_Main__ZulipSettings__domain=$main_creds_server_zuli
 export PIARA_SERVERCOMMONENV_Main__ZulipSettings__enabled=$main_servercommon_main_zulipsettings_enabled
 
 export PIARA_SERVERCOREENV_Main__Hangfire__Enabled='true'
-export PIARA_SERVERCOREENV_Main__Hangfire__ProcessUsersBackgroundJobs='true'
+export PIARA_SERVERCOREENV_Main__Hangfire__UsersBackgroundJobsWorkerCount='1'
 export PIARA_SERVERCOREENV_Main__Workers__Indexation__Enabled='true'
 export PIARA_SERVERCOREENV_Main__Workers__PushStixObjects__Enabled='true'
 
