--- a/front/deploy.config
+++ b/front/deploy.config
@@ -28,3 +28,4 @@ export PIARA_TRAEFIK_SERVER_PASS="http://back-server-core:5555/"
 
 export PIARA_WEBAPP_APP_URL="https://${main_common_domain_name_webapp}/"
 export PIARA_WEBAPP_HEADER_LABEL=$main_webapp_header_label
+export PIARA_WEBAPP_PIARA_LITE_ENABLED='true'
